# MobileIrisTracking

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/chengzhang/iristracking/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  app_main.cpp  egl_thread.cpp  egl_thread.h  native_opengl.cpp  native_opengl.h  tflite_facemesh.cpp  tflite_facemesh.h
app/src/main/cpp/common/: assertegl.c  assertegl.h  assertgl.c  assertgl.h  util_asset.cpp  util_asset.h  util_debug.h  util_egl.c  util_egl.h  util_matrix.c  util_matrix.h  util_pmeter.c  util_pmeter.h  util_render2d.c  util_render2d.h  util_render_target.c  util_render_target.h  util_shader.c  util_shader.h  util_texture.c  util_texture.h  util_tflite.cpp  util_tflite.h
app/src/main/java/com/chengzhang/iristracking/: MainActivity.java  NativeOpengl.java  NativeSurfaceView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/chengzhang/iristracking/: ExampleUnitTest.java
